filter pipe added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   </div>
   <div *ngIf="isSearchBarVisible; else searchbarHidden" class="row mt-2">
     <div class="col-4">
-      <input type="text" class="form-control" />
+      <input #filterInput (input)="filterPhrase = filterInput.value" type="text" class="form-control" />
     </div>
     <div class="col-2">
       <button class="btn btn-primary">search</button>
@@ -30,11 +30,11 @@
             <th>Seat</th>
             <th>Service</th>
             <th>Checked</th>
-            <th></th>
+            <th>Buttons</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let ticket of tickets">
+          <tr *ngFor="let ticket of tickets | arrayFilter:filterPhrase">
             <td>{{ ticket.id }}</td>
             <td>{{ ticket.flightNumber }}</td>
             <td>{{ ticket.seat }}</td>
