--- a/src/app/ticket-editor/ticket-editor.component.html
+++ b/src/app/ticket-editor/ticket-editor.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="ticket$ | async as ticket" class="card form-card">
     <div class="card-body">
       <h5>Edit Ticket</h5>
-      <form>
+      <form #ticketForm = "ngForm">
         <div class="form-group">
           <label for="flightNumber" class="form-label">Flight Number</label>
           <input
@@ -11,7 +11,12 @@
             id="flightNumber"
             name="flightNumber"
             class="form-control"
+            pattern="^[A-Za-z]{2}[0-9]{4}$"
+            required
           />
+          <div *ngIf = "ticketForm.controls['flightNumber']?.invalid" class="error-message">
+            It must consits of two letters and four numbers.
+          </div>
         </div>
 
         <div class="form-group">
@@ -21,11 +26,15 @@
             id="service"
             name="service"
             class="form-control"
+            required
           >
             <option value="economy">Economy</option>
             <option value="business">Business</option>
             <option value="tourist">Tourist</option>
           </select>
+          <div *ngIf = "ticketForm.controls['service']?.invalid" class="error-message">
+            Please selecet a valid option.
+          </div>
         </div>
 
         <div class="form-group">
@@ -36,7 +45,12 @@
             id="seat"
             name="seat"
             class="form-control"
+            pattern="^[A-Za-z]{1}[0-9]{1}$"
+            required
           />
+          <div *ngIf = "ticketForm.controls['seat']?.invalid" class="error-message">
+            It must consits of one letter and one number.
+          </div>
         </div>
 
         <div class="form-check mt-3">
