--- a/src/app/page/tickets/tickets.component.html
+++ b/src/app/page/tickets/tickets.component.html
@@ -1,4 +1,11 @@
 <div class="container mt-2">
+  <div class="row mt-3 mb-3">
+    <div class="col-12">
+      <button (click)="goToCreate()" class="btn btn-xl btn-success">
+        <i class="fa fa-plus"></i> new ticket
+      </button>
+    </div>
+  </div>
   <div class="row">
     <div class="d-grid gap-2">
       <button (click)="toggleSearchbar()" class="btn btn-info" type="button">
@@ -8,7 +15,12 @@
   </div>
   <div *ngIf="isSearchBarVisible; else searchbarHidden" class="row mt-2">
     <div class="col-4">
-      <input #filterInput (input)="filterPhrase = filterInput.value" type="text" class="form-control" />
+      <input
+        #filterInput
+        (input)="filterPhrase = filterInput.value"
+        type="text"
+        class="form-control"
+      />
     </div>
     <div class="col-2">
       <button class="btn btn-primary">search</button>
@@ -32,7 +44,9 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let ticket of tickets$ | async | arrayFilter:filterPhrase">
+          <tr
+            *ngFor="let ticket of tickets$ | async | arrayFilter : filterPhrase"
+          >
             <td>{{ ticket.id }}</td>
             <td>{{ ticket.flightNumber }}</td>
             <td>{{ ticket.seat }}</td>
