--- a/src/app/ticket/ticket-create/ticket-create.component.html
+++ b/src/app/ticket/ticket-create/ticket-create.component.html
@@ -27,6 +27,9 @@
           />
           <div *ngIf="!isValid('seat')" class="error-message">
             It must consist a letter and a number.
+            <div>
+              {{form.controls['seat'].errors?.['seatError']}}
+            </div>
           </div>
         </div>
 
